# meter-reader

./: Cargo.toml  README.rst  default.nix  flake.nix  rust-toolchain
.github/workflows/: main.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: meter_sample_value.rs  meter_section_info.rs  meter_value.rs
src/: main.rs  plot.R
src/meterreader/: Cargo.toml
src/meterreader/src/: main.rs
src/meterreader_models/: Cargo.toml
src/meterreader_models/src/: lib.rs
